<?xml version="1.0"?>
<package format="3">
  <name>ira_laser_tools</name>
  <version>2.0.7</version>
  <description>The ira_laser_tools package. These nodes are meant to provide some utils for lasers, like listen to different laser scan sources and merge them in a single scan or generate virtual laser scans from a pointcloud.</description>

  <url>http://www.ros.org/wiki/ira_laser_tools</url>
  <maintainer email="augusto.ballardini@unimib.it">Augusto</maintainer>
  <maintainer email="p.colombo45@campus.unimib.it">Pietro</maintainer>
  <maintainer email="f.delia2@campus.unimib.it">Fabio</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>laser_geometry</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <!-- Needed to work around https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=894656 on Debian Stretch -->
  <depend>libvtk-qt</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>eigen3</exec_depend>
  <exec_depend>pcl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
